--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "pksk",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "is-url": "^1.2.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
-    "shortid": "^2.2.16"
+    "redis": "^4.6.7",
+    "shortid": "^2.2.16",
+    "util": "^0.12.5"
   }
 }
