--- a/package.json
+++ b/package.json
@@ -1,24 +1,1 @@
-{
-  "name": "pacakage.json",
-  "version": "1.0.0",
-  "description": "group proj",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "author": "pksk",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.1.1",
-    "express": "^4.18.2",
-    "is-url": "^1.2.4",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.2",
-    "nodemon": "^2.0.22",
-    "redis": "^4.6.7",
-    "shortid": "^2.2.16",
-    "util": "^0.12.5"
-  }
-}
+{"name":"pacakage.json","version":"1.0.0","description":"group proj","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"nodemon index.js"},"author":"pksk","license":"ISC","dependencies":{"cors":"^2.8.5","dotenv":"^16.1.1","express":"^4.18.2","is-url":"^1.2.4","jsonwebtoken":"^9.0.0","mongoose":"^7.2.2","nodemon":"^2.0.22","shortid":"^2.2.16","util":"^0.12.5","redis": "^3.0.0"}}
