--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
     "redis": "^3.1.2",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   }
 }
